--- a/models/staging/sql_server_dbo/_sql_server_dbo__sources.yml
+++ b/models/staging/sql_server_dbo/_sql_server_dbo__sources.yml
@@ -22,6 +22,36 @@ sources:
       - name: orders
       - name: order_items
       - name: products
+        description: ""
+        columns:
+          - name: product_id
+            data_type: varchar
+            description: ""
+            tests:
+              - not_null
+              - unique
+          - name: price
+            data_type: float
+            description: ""
+            tests:
+              - dbt_utils.expression_is_true:
+                  expression: "price > 0"
+          - name: name
+            data_type: varchar
+            description: ""
+            tests:
+              - not_null
+          - name: inventory
+            data_type: number
+            description: ""
+            tests:
+              - not_null
+          - name: _fivetran_deleted
+            data_type: boolean
+            description: ""
+          - name: _fivetran_synced
+            data_type: timestamp_tz
+            description: ""
       - name: promos
         tests:
           - dbt_utils.expression_is_true:
@@ -54,4 +84,45 @@ sources:
             data_type: timestamp_tz
             description: ""
       - name: users
+        description: ""
+        columns:
+          - name: user_id
+            data_type: varchar
+            description: ""
+            tests:
+              - not_null
+              - unique
+          - name: updated_at
+            data_type: timestamp_tz
+            description: ""
+          - name: address_id
+            data_type: varchar
+            description: ""
+            tests:
+              - not_null
+          - name: last_name
+            data_type: varchar
+            description: ""
+          - name: created_at
+            data_type: timestamp_tz
+            description: ""
+          - name: phone_number
+            data_type: varchar
+            description: ""
+          - name: total_orders
+            data_type: number
+            description: ""
+          - name: first_name
+            data_type: varchar
+            description: ""
+          - name: email
+            data_type: varchar
+            description: ""
+          - name: _fivetran_deleted
+            data_type: boolean
+            description: ""
+          - name: _fivetran_synced
+            data_type: timestamp_tz
+            description: ""
+
           
