primeros staging spacex

--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -50,6 +50,8 @@ models:
         +schema: google_sheets
       sql_server_dbo:
         +schema: sql_server_dbo
+      spacex:
+        +schema: spacex
 
     intermediate:
       +materialized: view
