--- a/models/staging/spacex/_spacex__sources.yml
+++ b/models/staging/spacex/_spacex__sources.yml
@@ -4,7 +4,7 @@ sources:
 
   - name: spacex # name of the source 
     schema: spacex # this is the schema our raw data lives in
-    database: "{{ env_var('DBT_ENVIRONMENTS') }}_BRONZE_DB" # this is the name of our database
+    database: "ALUMNO23_DEV_BRONZE_DB" # this is the name of our database
 
     quoting:
       database: false
@@ -18,7 +18,376 @@ sources:
     tables:
 
       - name: cores
+        columns:
+          - name: block
+            data_type: number
+          - name: reuse_count
+            data_type: number
+          - name: rtls_attempts
+            data_type: number
+          - name: rtls_landings
+            data_type: number
+          - name: asds_attempts
+            data_type: number
+          - name: asds_landings
+            data_type: number
+          - name: last_update
+            data_type: varchar
+          - name: launches
+            data_type: varchar
+          - name: serial
+            data_type: varchar
+          - name: status
+            data_type: varchar
+          - name: id
+            data_type: varchar
+
+      - name: cores2
+        columns:
+          - name: c1
+            data_type: varchar
+          - name: c2
+            data_type: varchar
+          - name: c3
+            data_type: varchar
+          - name: c4
+            data_type: varchar
+          - name: c5
+            data_type: varchar
+          - name: c6
+            data_type: varchar
+          - name: c7
+            data_type: varchar
+          - name: c8
+            data_type: varchar
+          - name: c9
+            data_type: varchar
+          - name: c10
+            data_type: varchar
+          - name: c11
+            data_type: varchar
+
       - name: launches
+        columns:
+          - name: id
+            data_type: varchar
+          - name: flight_number
+            data_type: number
+          - name: name
+            data_type: varchar
+          - name: date_utc
+            data_type: date
+          - name: success
+            data_type: boolean
+          - name: upcoming
+            data_type: boolean
+          - name: static_fire_date_utc
+            data_type: timestamp_ntz
+          - name: tbd
+            data_type: boolean
+          - name: net
+            data_type: boolean
+          - name: window
+            data_type: number
+          - name: rocket
+            data_type: varchar
+          - name: launchpad
+            data_type: varchar
+          - name: auto_update
+            data_type: boolean
+          - name: launch_library_id
+            data_type: varchar
+          - name: details
+            data_type: varchar
+          - name: links_patch_small
+            data_type: varchar
+          - name: links_patch_large
+            data_type: varchar
+          - name: links_reddit_campaign
+            data_type: varchar
+          - name: links_reddit_launch
+            data_type: varchar
+          - name: links_reddit_media
+            data_type: varchar
+          - name: links_flickr_small
+            data_type: varchar
+          - name: links_flickr_original
+            data_type: varchar
+          - name: links_presskit
+            data_type: varchar
+          - name: links_webcast
+            data_type: varchar
+          - name: links_youtube_id
+            data_type: varchar
+          - name: links_article
+            data_type: varchar
+          - name: links_wikipedia
+            data_type: varchar
+          - name: payload_ids
+            data_type: varchar
+          - name: cores_summary
+            data_type: varchar
+          - name: crew_summary
+            data_type: varchar
+          - name: ship_ids
+            data_type: varchar
+          - name: capsule_ids
+            data_type: varchar
+          - name: failures_summary
+            data_type: varchar
+
       - name: launchpads
-      - name: rockets
+        columns:
+          - name: images
+            data_type: varchar
+          - name: name
+            data_type: varchar
+          - name: full_name
+            data_type: varchar
+          - name: locality
+            data_type: varchar
+          - name: region
+            data_type: varchar
+          - name: latitude
+            data_type: number
+          - name: longitude
+            data_type: number
+          - name: launch_attempts
+            data_type: number
+          - name: launch_successes
+            data_type: number
+          - name: rockets
+            data_type: varchar
+          - name: timezone
+            data_type: varchar
+          - name: launches
+            data_type: varchar
+          - name: status
+            data_type: varchar
+          - name: details
+            data_type: varchar
+          - name: id
+            data_type: varchar
+
+      - name: launchpads2
+        columns:
+          - name: id
+            data_type: varchar
+          - name: name
+            data_type: varchar
+          - name: full_name
+            data_type: varchar
+          - name: locality
+            data_type: varchar
+          - name: region
+            data_type: varchar
+          - name: timezone
+            data_type: varchar
+          - name: latitude
+            data_type: number
+          - name: longitude
+            data_type: number
+          - name: launch_attempts
+            data_type: number
+          - name: launch_successes
+            data_type: number
+          - name: status
+            data_type: varchar
+          - name: details
+            data_type: varchar
+          - name: rocket_ids_list
+            data_type: varchar
+          - name: launch_ids_list
+            data_type: varchar
+          - name: image_url_large_first
+            data_type: varchar
+
       - name: payloads
+        columns:
+          - name: dragon
+            data_type: varchar
+          - name: name
+            data_type: varchar
+          - name: type
+            data_type: varchar
+          - name: reused
+            data_type: boolean
+          - name: launch
+            data_type: varchar
+          - name: customers
+            data_type: varchar
+          - name: norad_ids
+            data_type: varchar
+          - name: nationalities
+            data_type: varchar
+          - name: manufacturers
+            data_type: varchar
+          - name: mass_kg
+            data_type: number
+          - name: mass_lbs
+            data_type: number
+          - name: orbit
+            data_type: varchar
+          - name: reference_system
+            data_type: varchar
+          - name: regime
+            data_type: varchar
+          - name: longitude
+            data_type: number
+          - name: semi_major_axis_km
+            data_type: number
+          - name: eccentricity
+            data_type: varchar
+          - name: periapsis_km
+            data_type: number
+          - name: apoapsis_km
+            data_type: number
+          - name: inclination_deg
+            data_type: number
+          - name: period_min
+            data_type: number
+          - name: lifespan_years
+            data_type: number
+          - name: epoch
+            data_type: timestamp_ntz
+          - name: mean_motion
+            data_type: number
+          - name: raan
+            data_type: number
+          - name: arg_of_pericenter
+            data_type: number
+          - name: mean_anomaly
+            data_type: number
+          - name: id
+            data_type: varchar
+
+      - name: payloads2
+        columns:
+          - name: id
+            data_type: varchar
+          - name: name
+            data_type: varchar
+          - name: type
+            data_type: varchar
+          - name: reused
+            data_type: boolean
+          - name: launch
+            data_type: varchar
+          - name: orbit
+            data_type: varchar
+          - name: reference_system
+            data_type: varchar
+          - name: regime
+            data_type: varchar
+          - name: longitude
+            data_type: number
+          - name: inclination_deg
+            data_type: number
+          - name: period_min
+            data_type: number
+          - name: lifespan_years
+            data_type: number
+          - name: apoapsis_km
+            data_type: number
+          - name: periapsis_km
+            data_type: number
+          - name: mass_kg
+            data_type: number
+          - name: mass_lbs
+            data_type: number
+          - name: dragon_capsule_id
+            data_type: varchar
+          - name: dragon_mass_returned_kg
+            data_type: number
+          - name: dragon_mass_returned_lbs
+            data_type: number
+          - name: dragon_flight_time_sec
+            data_type: number
+          - name: dragon_water_landing
+            data_type: boolean
+          - name: dragon_land_landing
+            data_type: boolean
+          - name: customers_list
+            data_type: varchar
+          - name: norad_ids_list
+            data_type: varchar
+          - name: nationalities_list
+            data_type: varchar
+          - name: manufacturers_list
+            data_type: varchar
+
+      
+      - name: rockets
+        columns:
+          - name: id
+            data_type: varchar
+          - name: name
+            data_type: varchar
+          - name: type
+            data_type: varchar
+          - name: active
+            data_type: boolean
+          - name: boosters
+            data_type: number
+          - name: cost_per_launch
+            data_type: number
+          - name: success_rate_pct
+            data_type: number
+          - name: first_flight
+            data_type: date
+          - name: country
+            data_type: varchar
+          - name: company
+            data_type: varchar
+          - name: wikipedia
+            data_type: varchar
+          - name: description
+            data_type: varchar
+          - name: height_meters
+            data_type: number
+          - name: height_feet
+            data_type: number
+          - name: diameter_meters
+            data_type: number
+          - name: diameter_feet
+            data_type: number
+          - name: mass_kg
+            data_type: number
+          - name: mass_lb
+            data_type: number
+          - name: engines_number
+            data_type: number
+          - name: engines_type
+            data_type: varchar
+          - name: engines_version
+            data_type: varchar
+          - name: engine_propellant_1
+            data_type: varchar
+          - name: engine_propellant_2
+            data_type: varchar
+          - name: engine_thrust_sea_level_kn
+            data_type: number
+          - name: engine_thrust_vacuum_kn
+            data_type: number
+          - name: landing_legs_number
+            data_type: number
+          - name: landing_legs_material
+            data_type: varchar
+          - name: first_stage_reusable
+            data_type: boolean
+          - name: first_stage_engines
+            data_type: number
+          - name: first_stage_fuel_amount_tons
+            data_type: number
+          - name: first_stage_burn_time_sec
+            data_type: number
+          - name: second_stage_engines
+            data_type: number
+          - name: second_stage_fuel_amount_tons
+            data_type: number
+          - name: second_stage_burn_time_sec
+            data_type: number
+          - name: payload_weights_summary
+            data_type: varchar
+          - name: flickr_image_urls_list
+            data_type: varchar
