actualización capa gold

--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -56,6 +56,8 @@ models:
     intermediate:
       +materialized: view
       +database: "{{ env_var('DBT_ENVIRONMENTS') }}_SILVER_DB"
+      spacex:
+        +schema: spacex
         
       
     marts:
